@@ -1,0 +1,8 @@
+package lib.dw.tests;
+
+public class TestLib {
+
+	public static native int getPid();
+	public static native long getFuncAddr();
+	
+}
